force-app/main/default/objects/Account/fields/Email_Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>Email_Quality_Score__c</fullName>
    <formula>CASE(
	Email_Quality__c,
	"*", IMAGE("/img/samples/stars_100.gif", "1 star"),
	"**", IMAGE("/img/samples/stars_200.gif", "2 stars"),
	"***", IMAGE("/img/samples/stars_300.gif", "3 stars"),
	"****", IMAGE("/img/samples/stars_400.gif", "4 stars"),
	"*****", IMAGE("/img/samples/stars_500.gif", "5 stars"),
	"FW", IMAGE("/img/msg_icons/error16.png", "FRAUD") + " FRAUD WARNING",
	"ST", IMAGE("/img/msg_icons/error16.png", "SPAM") + " POSSIBLE SPAM TRAP",
	"BA", IMAGE("/img/msg_icons/error16.png", "BOUNCE") + " POSSIBLE BOUNCE ALERT",
	"HB", IMAGE("/img/msg_icons/error16.png", "HARD BOUNCE") + " HARD BOUNCE ALERT",
	IMAGE("/img/samples/stars_000.gif", "no rating")
)</formula>
    <label>Email Quality Score</label>
    <type>Text</type>
</CustomField>