force-app/main/default/objects/Account/fields/Email_Valid__c.field-meta.xml
<CustomField>
    <fullName>Email_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies invalid email formats</description>
    <inlineHelpText>Identifies invalid email formats</inlineHelpText>
    <label>Email Syntax is Valid</label>
    <type>Checkbox</type>
</CustomField>