force-app/main/default/objects/Account/fields/Franchisee__c.field-meta.xml
<CustomField>
    <fullName>Franchisee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Franchisee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customers</relationshipLabel>
    <relationshipName>Customers</relationshipName>
    <type>Lookup</type>
</CustomField>