force-app/main/default/objects/Account/fields/GA_Visitor_ID__c.field-meta.xml
<CustomField>
    <fullName>GA_Visitor_ID__c</fullName>
    <label>GA Visitor ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>