force-app/main/default/objects/Account/fields/Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Geolocation__c</fullName>
    <label>Geolocation</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>