force-app/main/default/objects/Account/fields/Initial_Customer_Value__c.field-meta.xml
<CustomField>
    <fullName>Initial_Customer_Value__c</fullName>
    <label>Initial Customer Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>