force-app/main/default/objects/Account/fields/JetAccountId__c.field-meta.xml
<CustomField>
    <fullName>JetAccountId__c</fullName>
    <externalId>true</externalId>
    <label>JetAccountId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>