force-app/main/default/objects/Account/fields/landing_page_url__c.field-meta.xml
<CustomField>
    <fullName>landing_page_url__c</fullName>
    <label>Landing Page URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>