force-app/main/default/objects/Account/fields/Last4__c.field-meta.xml
<CustomField>
    <fullName>Last4__c</fullName>
    <label>Last4</label>
    <length>4</length>
    <type>Text</type>
</CustomField>