force-app/main/default/objects/Account/fields/Last_order_date__c.field-meta.xml
<CustomField>
    <fullName>Last_order_date__c</fullName>
    <description>Last order date rollup based on Customer Orders</description>
    <label>Last Order Date</label>
    <type>DateTime</type>
</CustomField>