force-app/main/default/objects/Account/fields/Lead_CTL__c.field-meta.xml
<CustomField>
    <fullName>Lead_CTL__c</fullName>
    <label>Lead CTL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>