force-app/main/default/objects/Account/fields/Legal_Entity_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Address_Line_1__c</fullName>
    <label>Legal Entity Address Line 1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>