force-app/main/default/objects/Account/fields/Legal_Entity_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Business_Name__c</fullName>
    <label>Legal Entity Business Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>