force-app/main/default/objects/Account/fields/Legal_Entity_Business_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Business_Tax_ID__c</fullName>
    <label>Legal Entity Business Tax ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>