force-app/main/default/objects/Account/fields/Legal_Entity_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Postal_Code__c</fullName>
    <label>Legal Entity Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>