force-app/main/default/objects/Account/fields/Legal_Entity_State__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_State__c</fullName>
    <label>Legal Entity State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>