force-app/main/default/objects/Account/fields/Legal_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Type__c</fullName>
    <label>Legal Entity Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>