force-app/main/default/objects/Account/fields/Mobile_Customer_Notification_Token__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Customer_Notification_Token__c</fullName>
    <label>Mobile Customer Notification Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>