force-app/main/default/objects/Account/fields/Monetary_Score_Brand__c.field-meta.xml
<CustomField>
    <fullName>Monetary_Score_Brand__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Monetary Score Brand</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>