force-app/main/default/objects/Account/fields/NewEmail__c.field-meta.xml
<CustomField>
    <fullName>NewEmail__c</fullName>
    <label>NewEmail</label>
    <type>Email</type>
</CustomField>