force-app/main/default/objects/Account/fields/Notification_Token__c.field-meta.xml
<CustomField>
    <fullName>Notification_Token__c</fullName>
    <label>Web Notification Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>