force-app/main/default/objects/Account/fields/Number_of_Same_Product_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Same_Product_Purchased__c</fullName>
    <label>Number of Same Product Purchased</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>