force-app/main/default/objects/Account/fields/Number_Of_Zero_Balance_Orders__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Zero_Balance_Orders__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Transaction Frequency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>