force-app/main/default/objects/Account/fields/Orders_Failed__c.field-meta.xml
<CustomField>
    <fullName>Orders_Failed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of sequential failed orders</description>
    <label>Orders Failed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>