force-app/main/default/objects/Account/fields/Pending_Balance__c.field-meta.xml
<CustomField>
    <fullName>Pending_Balance__c</fullName>
    <label>Pending Balance</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>