force-app/main/default/objects/Account/fields/Pricebook_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Eligibility__c</fullName>
    <formula>IF(
RFM_Score_Number__c > 444, 'Gold',
 IF(RFM_Score_Number__c &lt;= 444 &amp;&amp; CreatedDate &lt; NOW() - 90, 'Bronze',
  IF(Wholesaler__c, 'Wholesaler',
  'Normal'))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricebook Eligibility</label>
    <type>Text</type>
</CustomField>