force-app/main/default/objects/Account/fields/Primary_Email_Interest_Area__c.field-meta.xml
<CustomField>
    <fullName>Primary_Email_Interest_Area__c</fullName>
    <label>Primary Email Interest Area</label>
    <length>80</length>
    <type>Text</type>
</CustomField>