force-app/main/default/objects/Account/fields/referral_domain_url__c.field-meta.xml
<CustomField>
    <fullName>referral_domain_url__c</fullName>
    <label>Referral Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>