force-app/main/default/objects/Account/fields/Refund_For_Previous_Payouts__c.field-meta.xml
<CustomField>
    <fullName>Refund_For_Previous_Payouts__c</fullName>
    <formula>(Commissions_Paid__c +  Commissions_Paid_And_Refunded__c ) - Commission_Paid_Out__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refund For Previous Payouts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>