force-app/main/default/objects/Account/fields/Refund_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Refund_Transactions__c</fullName>
    <label>Refund Transactions</label>
    <summarizedField>Affiliate_Offer__c.Refund_Transactions__c</summarizedField>
    <summaryForeignKey>Affiliate_Offer__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>