force-app/main/default/objects/Account/fields/Refunds_and_Fails_Total__c.field-meta.xml
<CustomField>
    <fullName>Refunds_and_Fails_Total__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Refunds and Fails Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>