force-app/main/default/objects/Account/fields/RFM_CSAT__c.field-meta.xml
<CustomField>
    <fullName>RFM_CSAT__c</fullName>
    <formula>CASE(
    Recency_Score__c,
    5, "ACTIVE CUSTOMER",
    4, "DISENGAGING CUSTOMER",
    3, "AT RISK CUSTOMER",
    2, "CHURNING CUSTOMER",
    1, "LOST CUSTOMER",
    ""
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Survival Analysis Type</label>
    <type>Text</type>
</CustomField>