force-app/main/default/objects/Account/fields/RFM_Score__c.field-meta.xml
<CustomField>
    <fullName>RFM_Score__c</fullName>
    <formula>TEXT(Recency_Score__c)  + TEXT(Frequency_Score__c) + TEXT(Monetary_Score__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RFM Score</label>
    <type>Text</type>
</CustomField>