force-app/main/default/objects/Account/fields/RFM_Score_Brand__c.field-meta.xml
<CustomField>
    <fullName>RFM_Score_Brand__c</fullName>
    <formula>TEXT(Recency_Score_Brand__c) + TEXT(Frequency_Score_Brand__c) + TEXT(Monetary_Score_Brand__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RFM Score Brand</label>
    <type>Text</type>
</CustomField>