force-app/main/default/objects/Account/fields/RFM_Score_Brand_Number__c.field-meta.xml
<CustomField>
    <fullName>RFM_Score_Brand_Number__c</fullName>
    <formula>VALUE(RFM_Score_Brand__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RFM Score Brand Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>