force-app/main/default/objects/Account/fields/RFN_BNA_Brand__c.field-meta.xml
<CustomField>
    <fullName>RFN_BNA_Brand__c</fullName>
    <formula>CASE(
    Recency_Score_Brand__c,
    5, "X-SELL, UP-SELL, PROMOTIONAL",
    4, "DISCOUNT PROMOTION CAMPAIGN",
    3, "RETENTION CAMPAIGN",
    2, "REACTIVATION CAMPAIGN",
    1, "DEEP DISCOUNT REACTIVATION CAMPAIGN",
    ""
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Best Next Action Brand</label>
    <type>Text</type>
</CustomField>