force-app/main/default/objects/Account/fields/sales_funnel_name__c.field-meta.xml
<CustomField>
    <fullName>sales_funnel_name__c</fullName>
    <label>Sales Funnel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>