force-app/main/default/objects/Account/fields/Social_Append_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Social_Append_Run_Date__c</fullName>
    <label>Social Append Run Date</label>
    <type>DateTime</type>
</CustomField>