force-app/main/default/objects/Account/fields/SSN__c.field-meta.xml
<CustomField>
    <fullName>SSN__c</fullName>
    <description>SSN (only for US)</description>
    <inlineHelpText>SSN (only for US)</inlineHelpText>
    <label>SSN</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>