force-app/main/default/objects/Account/fields/Stripe_Account_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Account_API_Key__c</fullName>
    <label>Stripe Account API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>