force-app/main/default/objects/Account/fields/Stripe_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Account_ID__c</fullName>
    <label>Stripe Account ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>