force-app/main/default/objects/Account/fields/Stripe_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Account_Type__c</fullName>
    <label>Stripe Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>custom</fullName>
            </value>
            <value>
                <fullName>standard</fullName>
            </value>
            <value>
                <fullName>express</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>