force-app/main/default/objects/Account/fields/Stripe_Application_Fee__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Application_Fee__c</fullName>
    <label>Stripe Application Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>