force-app/main/default/objects/Account/fields/Stripe_Country_Support__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Country_Support__c</fullName>
    <label>Stripe Country Support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AU</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>