force-app/main/default/objects/Account/fields/Subtotal_From_Zero_Balance_Orders__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_From_Zero_Balance_Orders__c</fullName>
    <label>Customer Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>