force-app/main/default/objects/Account/fields/Terms_Of_Service_Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>Terms_Of_Service_Acceptance_Date__c</fullName>
    <label>Terms Of Service Acceptance Date</label>
    <type>Date</type>
</CustomField>